--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>我的个人主页</title>
-</head>
-<body>
-    <h1>欢迎来到我的 GitHub Pages 网站！</h1>
-    <p>这是我手动创建的第一个页面。</p>
-    <p>进行修改测试>ji>
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/chatroom/favicon.ico"><title>ipv6-chat</title><script src="/chatroom/config.js"></script><script defer="defer" src="/chatroom/js/chunk-vendors.e6579a39.js"></script><script defer="defer" src="/chatroom/js/app.8d76174a.js"></script><link href="/chatroom/css/app.5828fbe7.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ipv6-chat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
